--- a/demos/Main_Demo.ipynb
+++ b/demos/Main_Demo.ipynb
@@ -1109,6 +1109,7 @@
                 "    * 125M, 1.3B, 2.7B, 6.7B, 13B, 30B, 66B\n",
                 "* **GPT-J** - Eleuther's 6B parameter model, trained on the Pile\n",
                 "* **GPT-NeoX** - Eleuther's 20B parameter model, trained on the Pile\n",
+                "* **StableLM** - Stability AI's 3B and 7B models, with and without chat and instruction fine-tuning\n",
                 "* **Stanford CRFM models** - a replication of GPT-2 Small and GPT-2 Medium, trained on 5 different random seeds.\n",
                 "    * Notably, 600 checkpoints were taken during training per model, and these are available in the library with eg `HookedTransformer.from_pretrained(\"stanford-gpt2-small-a\", checkpoint_index=265)`.\n",
                 "- **BERT** - Google's bidirectional encoder-only transformer.\n",
